# sumo-config-gui

./: .gitignore  AGENTS.md  README.md  index.html  mise.toml  package-lock.json  package.json  vite.config.ts
examples/: README.md
examples/v1/channels/bleeding/: vehicle.json
examples/v2/: truck-002.yaml
scripts/: build.sh  run.sh
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: controller.rs  lib.rs  main.rs  model.rs  repository.rs  schema.rs  tower.rs
src-tauri/src/adapters/: current_vehicle_json.rs  mod.rs  profile_yaml.rs
