[package]
name = "sumo-config-gui"
version = "0.1.0"
edition = "2021"

[lib]
name = "sumo_config_gui"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
thiserror = "1"
walkdir = "2"
urlencoding = "2"
# Keep Tauri/cookie transitive `time` below the coherence-breaking release in this toolchain.
time = "=0.3.36"

[dev-dependencies]
tempfile = "3"
